--- a/sass/pages/main_restaurants.scss
+++ b/sass/pages/main_restaurants.scss
@@ -39,7 +39,7 @@
       margin : 10px auto ;
       width : 100% ; 
       height : 270px ;
-      box-shadow : 2px 2px 3px #f6f6f6 ;
+      box-shadow : 2px 2px 3px #c4c4c4 ;
       @media (min-width: map-get($breakpoints, tablette)) {
         margin : 10px auto ;
         width : 45%
